# watsonx_data_mcp_proxy

./: .gitignore  LICENSE  README.md  pyproject.toml
.bob/: mcp.json.example
src/watsonx_data_mcp_proxy/: __init__.py  __main__.py  server.py  token_manager.py
tests/: __init__.py  test_integration.py  test_server.py  test_token_manager.py
